# test-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dev_native_screen.vim
cmake/: common.cmake  protobuf.cmake  target.cmake
cmake/test/: test_common.cmake  test_function_scope.cmake
conanfiles/: all.txt  noqt.txt
files/: peleng.txt
src/base_include/: CMakeLists.txt
src/bext/utils/: CMakeLists.txt  aliases.h  channel.h  ctx.cpp  ctx.h
src/boost_test/: CMakeLists.txt  test_spsc_queue_0.cpp
src/boost_test/common/: CMakeLists.txt  tcp_echo_server.cpp  test_channel.cpp  test_spsc_queue_0.cpp  udp_client.cpp  udp_echo_server.cpp
src/boost_test/http/: test_client_0.cpp  test_server_0.cpp
src/c_frontend/lib/: CMakeLists.txt  codegen.cpp  codegen.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/c_frontend/lib/unittests/: CMakeLists.txt  test_lexer_gtest.cpp  test_parser_gtest.cpp  test_parser_rtti_gtest.cpp
src/c_frontend/main/: CMakeLists.txt  main.cpp
src/challenges/: test_coderbyte_adjpattern.cpp
src/clang/: CMakeLists.txt
src/clang_test/: CMakeLists.txt  find_class_decls.cpp  find_class_decls.h
src/clang_test/tests/: CMakeLists.txt  test_ast_consumer.cpp
src/core/: CMakeLists.txt  error.cpp  error.h  macros.h  make_noexcept.h  par_ostream.h  range.h  result.h  small_any.h  small_function.h  small_type_erased.h  small_type_erased_base.h  source_context.h  unique_ref.h
src/core/unittests/: CMakeLists.txt  test_error.cpp  test_range.cpp  test_result.cpp  test_result_gtest.cpp  test_small_function.cpp  test_small_type_erased_base.cpp  test_unique_ref_gtest.cpp
src/core_cpp20/: CMakeLists.txt  at_scope_exit.h
src/coroutines/: CMakeLists.txt  test_0.cpp  test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp
src/cpp17/: CMakeLists.txt
src/cpp20/: CMakeLists.txt
src/cpp23/: CMakeLists.txt
src/ctest_test/: CMakeLists.txt  test.cpp
src/enum_gen/: CMakeLists.txt  enum_gen.py
src/enum_gen_test/: CMakeLists.txt  defs.py  main.cpp
src/enum_gen_test/unittests/: CMakeLists.txt  test_0.cpp
src/gtest_test/: CMakeLists.txt  test_fixture_q.cpp
src/helloworld/: CMakeLists.txt  main.cpp
src/helloworld/helloworld2/: CMakeLists.txt
src/lang/linkage/static_members/: CMakeLists.txt  common.h  src1.cpp  src1.h  src2.cpp  src2.h  test_0.cpp
src/lang/macros/: CMakeLists.txt  test_0.cpp  test_dep_injection.cpp
src/lang/mt/: CMakeLists.txt  test_dummy.cpp
src/lang/random/: .test_async_scopes_1.cpp.swp  .test_initializer_list_0.cpp.swp  CMakeLists.txt  example_error_usage.cpp  sigaction_explanation.md  test_111.cpp  test_async_scopes_0.cpp  test_async_scopes_1.cpp  test_c_string_0.cpp  test_condition_var_0.cpp  test_constexpr_0.cpp  test_initializer_list_0.cpp  test_integers.cpp  test_literal_string_0.cpp  test_member_specialization_0.cpp  test_multiple_inheritance.cpp  test_private_friend_0.cpp  test_shared_ptr_0.cpp  test_signals_0.cpp  test_sigwait_0.cpp  test_static_cast_0.cpp  test_vis_specifiers_0.cpp  test_vis_specifiers_1.cpp  test_visibility_0.cpp  test_void_ptr.cpp
src/lang/random_sanitize/: CMakeLists.txt  test_0.cpp  test_1.cpp  test_2.cpp  test_3.cpp
src/lang/random_sanitize_memory/: CMakeLists.txt  test_0.cpp
src/lang/random_sanitize_thread/: CMakeLists.txt  test_0.cpp
src/lang/random_sanitizer_coverage/: CMakeLists.txt  test_0.cpp  test_1.cpp
src/lang/type_erasure/: 1  CMakeLists.txt  test_0.cpp
src/lang_test/mt/: CMakeLists.txt
src/minaio/: CMakeLists.txt  IOContext.h  acceptor.h  endpoint.h  io_context.h  socket.h
src/minaio/unittests/: test_acceptor.cpp  test_server.cpp
src/minaio/v0/: CMakeLists.txt  acceptor.h  connector.h  endpoint.h  io_context.h  socket_base.h  stream_socket.h
src/minaio/v0/unittests/: CMakeLists.txt  test_acceptor.cpp  test_client.cpp  test_connector.cpp  test_server.cpp
src/minaio/v1/: CMakeLists.txt  fd_ops.h  stuff.h
src/minaio/v1/unittests/: CMakeLists.txt
src/minaio/v2/: CMakeLists.txt  context.cpp  context.h  datagram_socket.cpp  datagram_socket.h  endpoint.h  error_details.cpp  error_details.h  fd.h  reactor.cpp  reactor.h
src/minaio/v2/details/: context.ipp  context_default_ut_traits.h
src/minaio/v2/mocks/: CMakeLists.txt  ReactorMock.h
src/minaio/v2/unittests/: CMakeLists.txt  test_context.cpp  test_datagram_socket.cpp
src/modules_test/lib/: CMakeLists.txt
src/modules_test/tests/: CMakeLists.txt  test_0.cpp
src/mystd/: any.h  array.h  fixed_vector.h  vector.h
src/posix_test/: CMakeLists.txt  test_epoll.cpp  test_poll.cpp
src/posix_test/linux/: CMakeLists.txt  test_epoll.cpp
src/posix_test/unix/: CMakeLists.txt  test_nonblocking_accept.cpp  test_poll.cpp  test_signals_0.cpp  test_signals_1.cpp  test_signals_2.cpp
src/protos/dummy/: CMakeLists.txt  dummy_0.proto  dummy_1.proto  dummy_2.proto
src/protos/dummy/unittests/: CMakeLists.txt  test_0.cpp  test_1.cpp
src/protos/grpc_dummy/: CMakeLists.txt  dummy_0.proto
src/protos/grpc_dummy/examples/: CMakeLists.txt  client.cpp  server.cpp  test0.cpp
src/protos/plugins/dummy/: CMakeLists.txt  main.cpp
src/pybind11_test/: CMakeLists.txt  dummy.cpp
src/pybind11_test1/: CMakeLists.txt  dummy.cpp
src/python3/: CMakeLists.txt
src/random/: test_0.cpp  test_1.cpp  test_condition_var_0.cpp  test_depinj.h  test_depinj_async_stream.h  test_depinj_macros.h  test_depinj_mocked.cpp  test_depinj_real.cpp  test_mempools.cpp  test_no_exceptions.cpp  test_private_access.cpp  test_unique_lock_0.cpp
src/random_c/: CMakeLists.txt  test_dummy_0.c
src/sanitizers/: CMakeLists.txt  trace_pc_guard_example.cpp
src/timtim/: SimpleVector  SimpleVector.cpp  ex_1.cpp  fibonacci_0.cpp  matrix_average_column_sorting.cpp  nondeclining_sequences.cpp  string_bracket_balance.cpp  test_buses.cpp  test_dump_peleng.cpp  test_editor.cpp  test_stack.cpp
